// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "avgDailyPopulation": 54,
  "displayName": "Walter Harris",
  "externalId": "OFFICER4",
  "fullName": {
    "givenNames": "Walter",
    "surname": "Harris",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so1",
  "supervisorExternalIds": [
    "agonzalez123",
    "dlee456",
  ],
  "zeroGrantOpportunities": [
    "LSU",
    "pastFTRD",
  ],
}
`;

exports[`transformations 2`] = `
{
  "avgDailyPopulation": 12,
  "displayName": "Jack Hernandez",
  "externalId": "so2",
  "fullName": {
    "givenNames": "Jack",
    "surname": "Hernandez",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so2",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 3`] = `
{
  "avgDailyPopulation": 32,
  "displayName": "Jason Nelson",
  "externalId": "so3",
  "fullName": {
    "givenNames": "Jason",
    "surname": "Nelson",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so3",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 4`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Carl Mark Campbell",
  "externalId": "so4",
  "fullName": {
    "givenNames": "Carl",
    "middleNames": "Mark",
    "surname": "Campbell",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so4",
  "supervisorExternalIds": [
    "dlee456",
  ],
}
`;

exports[`transformations 5`] = `
{
  "avgDailyPopulation": null,
  "displayName": "Casey Ramirez",
  "externalId": "so5",
  "fullName": {
    "givenNames": "Casey",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so5",
  "supervisorExternalIds": [
    "rsmith789",
  ],
}
`;

exports[`transformations 6`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Elizabeth Ramirez",
  "externalId": "so8",
  "fullName": {
    "givenNames": "Elizabeth",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so8",
  "supervisorExternalIds": [
    "rsmith789",
  ],
}
`;

exports[`transformations 7`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Harriet Boyd",
  "externalId": "so9",
  "fullName": {
    "givenNames": "Harriet",
    "surname": "Boyd",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so9",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 8`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Stephen Mann",
  "externalId": "so10",
  "fullName": {
    "givenNames": "Stephen",
    "surname": "Mann",
  },
  "includeInOutcomes": true,
  "pseudonymizedId": "hashed-so10",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;
